# kd-tree

./: CMakeLists.txt  kd-tree.h  scapegoat-tree.h
test/: general.cpp  scapegoat.cpp
